[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Fishing.gd" type="Script" id=2]
[ext_resource path="res://assets/2D/Fishing/FishingBar.png" type="Texture" id=3]
[ext_resource path="res://assets/2D/Fishing/FishingCircleOver.png" type="Texture" id=4]
[ext_resource path="res://assets/2D/Fishing/FishingCircle.png" type="Texture" id=5]

[node name="Fishing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -87.0
margin_bottom = 50.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Navigation"]
margin_right = 42.0
margin_bottom = 20.0
text = "Back"

[node name="Label" type="Label" parent="Navigation"]
margin_left = 587.0
margin_top = 3.0
margin_right = 632.0
margin_bottom = 17.0
size_flags_horizontal = 6
text = "Fishing"

[node name="StartPanel" type="Panel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 200.0
margin_top = -200.0
margin_right = -200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="StartPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.5
margin_top = -40.0
margin_right = 20.5
margin_bottom = -20.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishingBar" type="TextureProgress" parent="."]
margin_left = 100.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 610.0
step = 0.1
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_under = Color( 0.145098, 0.12549, 0.12549, 1 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.392157, 0.584314, 0.929412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishingCircle" type="TextureProgress" parent="FishingBar"]
margin_left = -16.0
margin_top = 459.0
margin_right = 66.0
margin_bottom = 541.0
step = 0.2
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 4
tint_under = Color( 0.941176, 1, 1, 1 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.254902, 0.411765, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -120.0
margin_right = 17.0
margin_bottom = -100.0
text = "Tap"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Navigation/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="StartPanel/Start" to="." method="_start_game"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
